@@ -16,16 +16,15 @@
 
 package io.helidon.build.maven.sitegen;
 
-import java.io.File;
 import java.io.IOException;
 import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Map.Entry;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -33,15 +32,20 @@ import io.helidon.build.common.SourcePath;
 import io.helidon.build.maven.sitegen.asciidoctor.AsciidocPageRenderer;
 import io.helidon.build.maven.sitegen.freemarker.FreemarkerEngine;
 import io.helidon.build.maven.sitegen.freemarker.TemplateSession;
-import io.helidon.config.Config;
+import io.helidon.build.maven.sitegen.models.Nav;
+import io.helidon.build.maven.sitegen.models.Page;
 
+import static io.helidon.build.maven.sitegen.Helper.copyResources;
 import static io.helidon.build.maven.sitegen.Helper.loadResourceDirAsPath;
+import static io.helidon.build.maven.sitegen.Helper.requireValidString;
 import static io.helidon.build.maven.sitegen.asciidoctor.AsciidocPageRenderer.ADOC_EXT;
 
 /**
  * A backend implementation for vuetifyjs.
+ *
  * @see <a href="https://vuetifyjs.com">https://vuetifyjs.com</a>
  */
+@SuppressWarnings("unused")
 public class VuetifyBackend extends Backend {
 
     /**
@@ -56,23 +60,19 @@ public class VuetifyBackend extends Backend {
     private static final String RELEASES_PROP = "releases";
 
     private final Map<String, PageRenderer> pageRenderers;
-    private final VuetifyNavigation navigation;
+    private final Nav navigation;
     private final Map<String, String> theme;
     private final Path staticResources;
-    private final String homePage;
+    private final String home;
     private final List<String> releases;
 
-    private VuetifyBackend(Map<String, String> theme,
-                           VuetifyNavigation navigation,
-                           String homePage,
-                           List<String> releases) {
+    private VuetifyBackend(Builder builder) {
         super(BACKEND_NAME);
-        Helper.checkNonNullNonEmpty(homePage, HOME_PAGE_PROP);
-        this.theme = theme == null ? Collections.emptyMap() : theme;
-        this.navigation = navigation;
-        this.homePage = homePage;
-        this.releases = releases == null ? Collections.emptyList() : releases;
-        this.pageRenderers = Map.of(ADOC_EXT, new AsciidocPageRenderer(BACKEND_NAME));
+        this.theme = builder.theme;
+        this.navigation = builder.navigation;
+        this.home = requireValidString(builder.home, "home");
+        this.releases = builder.releases;
+        this.pageRenderers = Map.of(ADOC_EXT, AsciidocPageRenderer.create(BACKEND_NAME));
         try {
             staticResources = loadResourceDirAsPath(STATIC_RESOURCES);
         } catch (URISyntaxException | IOException ex) {
@@ -82,46 +82,50 @@ public class VuetifyBackend extends Backend {
 
     /**
      * Get the navigation.
-     * @return {@link VuetifyNavigation} or {@code null} if not set
+     *
+     * @return navigation tree root or {@code null} if not set
      */
-    public VuetifyNavigation getNavigation() {
+    public Nav navigation() {
         return navigation;
     }
 
     /**
      * Get the theme.
-     * @return {@code Map<String,String>}, never {@code null}
+     *
+     * @return map, never {@code null}
      */
-    public Map<String, String> getTheme() {
+    public Map<String, String> theme() {
         return theme;
     }
 
     /**
-     * Get the home page source path.
-     * @return the source path or {@code null} if not set
+     * Get the home.
+     *
+     * @return home or {@code null} if not set
      */
-    public String getHomePage() {
-        return homePage;
+    public String home() {
+        return home;
     }
 
     /**
-     * Get the list of releases.
-     * @return {@code List<String,String>}, never {@code null}
+     * Get the releases.
+     *
+     * @return list, never {@code null}
      */
-    public List<String> getReleases() {
+    public List<String> releases() {
         return releases;
     }
 
     @Override
-    public Map<String, PageRenderer> pageRenderers() {
+    public Map<String, PageRenderer> renderers() {
         return pageRenderers;
     }
 
     @Override
     public void generate(RenderingContext ctx) {
-        File pagesDir = new File(ctx.getOutputdir(), "pages");
+        Path pagesDir = ctx.outputDir().resolve("pages");
         try {
-            Files.createDirectories(pagesDir.toPath());
+            Files.createDirectories(pagesDir);
         } catch (IOException ex) {
             throw new RenderingException(ex.getMessage(), ex);
         }
@@ -132,68 +136,69 @@ public class VuetifyBackend extends Backend {
         // copy declared assets
         ctx.copyStaticAssets();
 
-        TemplateSession session = ctx.getTemplateSession();
+        TemplateSession session = ctx.templateSession();
 
-        Page home = ctx.getPages().get(new SourcePath(homePage).asString());
+        Page home = ctx.pages().get(new SourcePath(this.home).asString());
         if (home == null) {
             throw new IllegalStateException("unable to get home page");
         }
 
         // resolve navigation
-        VuetifyNavigation resolvedNavigation = navigation == null ? null
-                : navigation.resolve(ctx.getPages().values());
+//        Navigation resolvedNavigation = navigation == null ? null
+//                : navigation.resolve(ctx.getPages().values());
+//        Navigation resolvedNavigation = null;
 
         // resolve navigation routes
-        List<String> navRouteEntries = resolvedNavigation != null
-                 ? resolvedNavigation.getItems().stream()
-                .filter(VuetifyNavigation.Item::isGroup)
-                .flatMap((item) -> item.asGroup().getItems().stream())
-                .filter(VuetifyNavigation.Item::isSubGroup)
-                .flatMap((groupItem) -> groupItem.asSubGroup().getItems().stream())
-                .filter(VuetifyNavigation.Item::isLink)
-                .map((subGroupItem) -> ctx.getPageForRoute(
-                        subGroupItem.asLink()
-                            .getHref())
-                            .getSourcePath())
-                .collect(Collectors.toList()) : Collections.emptyList();
+        List<String> navRouteEntries = List.of();
+//        List<String> navRouteEntries = resolvedNavigation != null
+//                 ? resolvedNavigation.items().stream()
+//                                     .filter(NavItem::isGroup)
+//                                     .flatMap((item) -> item.asGroup().getItems().stream())
+//                                     .filter(NavItem::isSubgroup)
+//                                     .flatMap((groupItem) -> groupItem.asSubGroup().getItems().stream())
+//                                     .filter(NavItem::isLink)
+//                                     .map((subGroupItem) -> ctx.getPageForRoute(
+//                        subGroupItem.asLink()
+//                            .getHref())
+//                            .getSourcePath())
+//                                     .collect(Collectors.toList()) : Collections.emptyList();
 
         // resolve route entries
         List<String> routeEntries = Stream.concat(
-                navRouteEntries.contains(home.getSourcePath())
-                ? Stream.empty() : Stream.of(home.getSourcePath()),
-                Stream.concat(navRouteEntries.stream(),
-                        ctx.getPages().keySet().stream()
-                                .filter(item -> !navRouteEntries.contains(item))))
-                .collect(Collectors.toList());
+                                                  navRouteEntries.contains(home.sourcePath())
+                                                          ? Stream.empty() : Stream.of(home.sourcePath()),
+                                                  Stream.concat(navRouteEntries.stream(),
+                                                          ctx.pages().keySet().stream()
+                                                             .filter(item -> !navRouteEntries.contains(item))))
+                                          .collect(Collectors.toList());
 
-        Map<String, String> allBindings = session.getVueBindings().getBindings();
+        Map<String, String> allBindings = session.vueBindings().bindings();
 
         Map<String, Object> model = new HashMap<>();
-        model.put("searchEntries", session.getSearchIndex().getEntries());
+        model.put("searchEntries", session.searchIndex().entries());
         model.put("navRouteEntries", navRouteEntries);
         model.put("routeEntries", routeEntries);
-        model.put("customLayoutEntries", session.getCustomLayouts().getMappings());
-        model.put("pages", ctx.getPages());
-        model.put("metadata", home.getMetadata());
-        model.put("navigation", resolvedNavigation);
-        model.put("header", ctx.getSite().getHeader());
+        model.put("customLayoutEntries", session.customLayouts().mappings());
+        model.put("pages", ctx.pages());
+        model.put("metadata", home.metadata());
+        model.put("navigation", null); // TODO
+        model.put("header", ctx.site().header());
         model.put("theme", theme);
         model.put("home", home);
         model.put("releases", releases);
         model.put("bindings", allBindings);
 
-        FreemarkerEngine freemarker = ctx.getSite().getEngine().freemarker();
+        FreemarkerEngine freemarker = ctx.site().engine().freemarker();
 
         // custom bindings
-        for (Page page : ctx.getPages().values()) {
-            String bindings = allBindings.get(page.getSourcePath());
+        for (Page page : ctx.pages().values()) {
+            String bindings = allBindings.get(page.sourcePath());
             if (bindings != null) {
                 Map<String, Object> bindingsModel = new HashMap<>(model);
                 bindingsModel.put("bindings", bindings);
                 bindingsModel.put("page", page);
-                freemarker.renderFile("custom_bindings",
-                        "pages/" + page.getTargetPath() + "_custom.js",
-                        bindingsModel, ctx);
+                String path = "pages/" + page.targetPath() + "_custom.js";
+                freemarker.renderFile("custom_bindings", path, bindingsModel, ctx);
             }
         }
 
@@ -208,124 +213,133 @@ public class VuetifyBackend extends Backend {
 
         // copy vuetify resources
         try {
-            Helper.copyResources(staticResources, ctx.getOutputdir());
+            copyResources(staticResources, ctx.outputDir());
         } catch (IOException ex) {
-            throw new RenderingException(
-                    "An error occurred during static resource processing ", ex);
+            throw new RenderingException("An error occurred during static resource processing ", ex);
         }
     }
 
     /**
-     * A fluent builder to create {@link VuetifyBackend} instances.
+     * A builder of {@link VuetifyBackend}.
      */
-    public static class Builder extends Backend.Builder<VuetifyBackend> {
+    public static class Builder implements Supplier<VuetifyBackend> {
+
+        private final Map<String, String> theme = new HashMap<>();
+        private Nav navigation;
+        private String home;
+        private List<String> releases;
 
         /**
          * Set the theme.
-         * @param theme a {@code Map<String, String>} representing theme options
-         * @return the {@link Builder} instance
+         *
+         * @param theme a map containing theme options
+         * @return this builder
          */
-        @SuppressWarnings("unused")
-        public Builder theme(Map<String, String> theme){
-            put(THEME_PROP, theme);
+        public Builder theme(Map<String, String> theme) {
+            if (theme != null) {
+                this.theme.putAll(theme);
+            }
             return this;
         }
 
         /**
          * Set the navigation.
-         * @param navigation see {@link VuetifyNavigation}
-         * @return the {@link Builder} instance
+         *
+         * @param navigation navigation
+         * @return this builder
          */
-        public Builder navigation(VuetifyNavigation navigation) {
-            put(NAVIGATION_PROP, navigation);
+        public Builder navigation(Nav navigation) {
+            this.navigation = navigation;
             return this;
         }
 
         /**
-         * Set the home page source path.
-         * @param homePage the source path of the document to use as home page
-         * @return the {@link Builder} instance
+         * Set the navigation.
+         *
+         * @param supplier navigation supplier
+         * @return this builder
          */
-        public Builder homePage(String homePage) {
-            put(HOME_PAGE_PROP, homePage);
+        public Builder navigation(Supplier<Nav> supplier) {
+            this.navigation = supplier.get();
+            return this;
+        }
+
+        /**
+         * Set the home.
+         *
+         * @param home source path of the home page document
+         * @return this builder
+         */
+        public Builder home(String home) {
+            this.home = home;
             return this;
         }
 
         /**
          * Set the releases.
-         * @param releases a {@code List<String>} representing all release versions
-         * @return the {@link Builder} instance
+         *
+         * @param releases releases
+         * @return this builder
          */
-        public Builder releases(List<String> releases){
-            put(RELEASES_PROP, releases);
-            return this;
-        }
-
-        @Override
-        public Builder config(Config node) {
-            if (node.exists()) {
-                // theme
-                node.get(THEME_PROP)
-                        .detach()
-                        .asMap()
-                        .ifPresent(it -> put(THEME_PROP, it));
-
-                // navigation
-                node.get(NAVIGATION_PROP).ifExists(c
-                        -> put(NAVIGATION_PROP, VuetifyNavigation.builder()
-                                .config(c)
-                                .build()));
-
-                // homePage
-                node.get(HOME_PAGE_PROP)
-                        .asString()
-                        .ifPresent(it -> put(HOME_PAGE_PROP, it));
-
-                // releases
-                node.get(RELEASES_PROP)
-                        .asList(String.class)
-                        .ifPresent(it -> put(RELEASES_PROP, it));
+        public Builder releases(List<String> releases) {
+            if (releases != null) {
+                this.releases.addAll(releases);
             }
             return this;
         }
 
-        @Override
+        /**
+         * Set the releases.
+         *
+         * @param releases releases
+         * @return this builder
+         */
+        public Builder releases(String... releases) {
+            if (releases != null) {
+                this.releases.addAll(Arrays.asList(releases));
+            }
+            return this;
+        }
+
+        /**
+         * Apply the specified configuration.
+         *
+         * @param config config
+         * @return this builder
+         */
+        public Builder config(Config config) {
+            theme.putAll(config.get("theme")
+                               .detach()
+                               .asMap(String.class)
+                               .orElseGet(Map::of));
+            home = config.get("home").asString().orElse(null);
+            releases.addAll(config.get("releases")
+                                  .asList(String.class)
+                                  .orElseGet(List::of));
+            return this;
+        }
+
+        /**
+         * Build the instance.
+         *
+         * @return new instance
+         */
         public VuetifyBackend build() {
-            Map<String, String> theme = null;
-            VuetifyNavigation navigation = null;
-            String homePage = null;
-            List<String> releases = null;
-            for (Entry<String, Object> entry : values()) {
-                String attr = entry.getKey();
-                Object val = entry.getValue();
-                switch (attr) {
-                    case (THEME_PROP):
-                        theme = asMap(val, String.class, String.class);
-                        break;
-                    case (NAVIGATION_PROP):
-                        navigation = asType(val, VuetifyNavigation.class);
-                        break;
-                    case (HOME_PAGE_PROP):
-                        homePage = asType(val, String.class);
-                        break;
-                    case (RELEASES_PROP):
-                        releases = asList(val, String.class);
-                        break;
-                    default:
-                        throw new IllegalStateException(
-                                "Unknown attribute: " + attr);
-                }
-            }
-            return new VuetifyBackend(theme, navigation, homePage, releases);
+            return new VuetifyBackend(this);
+        }
+
+        @Override
+        public VuetifyBackend get() {
+            return build();
         }
     }
 
     /**
-     * Create a new {@link Builder} instance.
-     * @return the created builder
+     * Create a new builder.
+     *
+     * @return new builder
      */
-    @SuppressWarnings("unchecked")
-    public static Builder builder(){
+    public static Builder builder() {
         return new Builder();
     }
 }
